# symphony

./: .gitignore  .gitmodules  .prettierrc  LICENSE  README.md  badge-languages.json  badge-strings.json  badge-translated.json  build.gradle  build.gradle.kts  gradle.properties  index.html  package-lock.json  package.json  settings.gradle  settings.gradle.kts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.phrasey/: additional-locales.json  config.toml  hooks.js  schema.toml
.run/: Test Metaphony.run.xml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
assets/: index-0149aea6.css  index-112244c4.js  index-1128fdff.css  index-168c3f0c.js  index-282108ac.css  index-37adcc61.js  index-46fe24a7.css  index-58776e7d.js  index-7b1e39ee.css  index-7c4b69de.js  index-81fc4032.css  index-82204cfe.css  index-Kz6o9p7P.css  index-ac6f9134.js  index-b7d43211.css  index-c67e8a2f.css  index-cbf4a776.js  index-e44316cf.js  index-kA6uNmoF.js
cli/: increment-version.js  increment-version.ts
gradle/: libs.versions.toml
i18n/: De.yaml  Symphony.txt  be.toml  be.toml.txt  be.yaml  de.toml  de.yaml  en.toml  en.yaml  es.toml  es.yaml  fa.toml  fi.toml  fr.toml  fr.toml.txt  it.toml  it.yaml  ja.toml  keys.json  pl.toml  pt-br.yaml  pt.toml  pt_BR.toml  ro.toml  ru.toml  ru.toml.txt  ru.yaml  ryu.toml  tr.toml  tr.yaml  uk.toml  uk.toml.txt  uk.yaml  vi.toml  zh-Hans.toml  zh-cn.yaml  zh.yaml  zh_HK.toml
metaphony/src/main/cpp/: AudioMetadataParser.cpp  CMakeLists.txt  TagLibHelper.cpp  TagLibHelper.h  metaphony.cpp
(+538 files in other folders)
